# beginning_bazel

./: .gitignore  .gitmodules  README.md  WORKSPACE.bazel
.github/workflows/: ci.yml
blog-lab/: README.md
blog-lab/demo-greeting/: README.md  WORKSPACE.bazel  go.mod
blog-lab/demo-greeting/pkg/greetings/: greetings.go
blog-lab/empty/: BUILD.bazel  README.md  empty.bzl
blog-lab/with-pytest/: BUILD.bazel  README.md  WORKSPACE.bazel  main.py  pytest.ini  test_main.py
blog-lab/with-pytest/lib/: BUILD.bazel  prime.py  test_prime.py
book_bazel_beginner/: README.md  WORKSPACE.bazel
book_bazel_beginner/ch3/: README.md
book_bazel_beginner/ch3/src/: BUILD.bazel
book_bazel_beginner/ch4/: README.md
book_bazel_beginner/ch4/python/: BUILD.bazel  calculator_test.py
book_bazel_beginner/ch5/: README.md
book_bazel_beginner/ch5/src/: BUILD.bazel  TransmissionObject.java  echo_server.go
book_bazel_beginner/ch6/: README.md
book_bazel_beginner/ch6/src/: BUILD.bazel  transmission_object.proto
ch3/: README.md  bazel-bin  bazel-ch3  bazel-out  bazel-testlogs
ch3/src/: BUILD.bazel
ch4/: README.md  WORKSPACE.bazel
ch4/ex_lib_python/: BUILD.bazel  calculator_test.py
ch4/ex_simple_python/: hello_world.py
ch4/exercise/: BUILD.bazel
ch4/python/: BUILD.bazel  calculator_test.py
ch4/src/: BUILD.bazel
ch5/: README.md  WORKSPACE.bazel
ch5/src/: BUILD.bazel  EchoClient.java  echo_client.py  transmission_object.go
ch6/: README.md  WORKSPACE.bazel
ch6/src/: BUILD.bazel  EchoClient.java
other-examples/example-dotnetcore/: README.md  WORKSPACE.bazel  example-dotnetcore.sln
other-examples/example-dotnetcore/aspnetcore/: AspNetCore.csproj  BUILD.bazel  Program.cs  WeatherForecast.cs
other-examples/example-dotnetcore/aspnetcore/Controllers/: WeatherForecastController.cs
other-examples/example-dotnetcore/aspnetcore/Properties/: launchSettings.json
src/: HelloWorld.java  IntMultiplier.java  IntMultiplierTest.java
yt_bazel_tutorial/: .bazelrc  README.md  WORKSPACE.bazel  maven_install.json  package.json
yt_bazel_tutorial/projects/project1/: BUILD.bazel  README.md
yt_bazel_tutorial/projects/project10/: README.md
yt_bazel_tutorial/projects/project10/src/main/java/com/cool21540125/javagreeter/greeter/: BUILD.bazel  Greeter.java
yt_bazel_tutorial/projects/project10/src/main/java/com/cool21540125/javagreeter/main/: BUILD.bazel  main.java
yt_bazel_tutorial/projects/project2/: README.md
yt_bazel_tutorial/projects/project2/calculator/: BUILD.bazel  calculator_test.py
yt_bazel_tutorial/projects/project2/my-python-app/: BUILD.bazel  main.py
yt_bazel_tutorial/projects/project2/py_web/: BUILD.bazel  app.py
yt_bazel_tutorial/projects/project2/python_calculator/: BUILD.bazel  calculator_test.py
yt_bazel_tutorial/projects/project2/python_web/: BUILD.bazel  main.py
yt_bazel_tutorial/projects/project4/: READMD.md  go.mod
yt_bazel_tutorial/projects/project4/go_calculator/: BUILD.bazel  calculator.go  calculator_test.go
yt_bazel_tutorial/projects/project4/go_hello_world/: BUILD.bazel  hello_world_test.go
yt_bazel_tutorial/projects/project4/go_web/: BUILD.bazel  main.go
yt_bazel_tutorial/projects/project5/: README.md  WORKSPACE.bazel  package.json
yt_bazel_tutorial/projects/project5/node_calculator/: BUILD.bazel  calculator.spec.js
yt_bazel_tutorial/projects/project5/node_web/: BUILD.bazel  index.js
yt_bazel_tutorial/projects/project6/: README.md
yt_bazel_tutorial/projects/project6/python_calculator/: BUILD.bazel  calculator_test.py
yt_bazel_tutorial/projects/project6/python_web/: BUILD.bazel  python_web.py
yt_bazel_tutorial/projects/projectA/: BUILD.bazel
yt_bazel_tutorial/projects/projectB/calculator/: BUILD.bazel  calculator_test.py
yt_bazel_tutorial/projects/projectC/my-python-app/: BUILD.bazel  main.py
