load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

### rules_go
http_archive(
    name = "io_bazel_rules_go",
    sha256 = "91585017debb61982f7054c9688857a2ad1fd823fc3f9cb05048b0025c47d023",
    urls = [
        "https://mirror.bazel.build/github.com/bazelbuild/rules_go/releases/download/v0.42.0/rules_go-v0.42.0.zip",
        "https://github.com/bazelbuild/rules_go/releases/download/v0.42.0/rules_go-v0.42.0.zip",
    ]
)

load("@io_bazel_rules_go//go:deps.bzl", "go_rules_dependencies", "go_register_toolchains")
go_rules_dependencies()
go_register_toolchains(version = "1.21.1")


### rules_python
http_archive(
    name = "io_bazel_rules_python",
    sha256 = "9d04041ac92a0985e344235f5d946f71ac543f1b1565f2cdbc9a2aaee8adf55b",
    strip_prefix = "rules_python-0.26.0",
    url = "https://github.com/bazelbuild/rules_python/releases/download/0.26.0/rules_python-0.26.0.tar.gz",
)

load("@io_bazel_rules_python//python:repositories.bzl", "py_repositories")

py_repositories()


### git (功能基本上同 http_archive)
# load("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")

# 這個 Target name 不應與上面的 http_archive 取得的 Target name 相同
# git_repository(
#     name = "io_bazel_rules_go",
#     remote = "https://github.com/bazelbuild/rules_go.git",
#     commit = "f5cfc31d4e8de28bf19d0fb1da2ab8f4be0d2cde",
# )


