
load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

### ============ project2 - python ============

http_archive(
    name = "rules_python",
    url = "https://github.com/bazelbuild/rules_python/releases/download/0.5.0/rules_python-0.5.0.tar.gz",
    sha256 = "cd6730ed53a002c56ce4e2f396ba3b3be262fd7cb68339f0377a45e8227fe332",
)



### ============ project3 -  ============
### ============ project4 -  ============
### ============ project5 -  ============
### ============ project6 -  ============
### ============ project7 -  ============
