
workspace(
    name = "multi-language-bazel-monorepo",
)

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

### ============ project2 - python ============

http_archive(
    name = "rules_python",
    url = "https://github.com/bazelbuild/rules_python/releases/download/0.5.0/rules_python-0.5.0.tar.gz",
    sha256 = "cd6730ed53a002c56ce4e2f396ba3b3be262fd7cb68339f0377a45e8227fe332",
)

load("@rules_python//python:pip.bzl", "pip_install")

pip_install(
    name = "python_deps",
    requirements = "//projects/project2/third_party:requirements.txt",
)


### ============ project3 -  ============
### ============ project4 -  ============
### ============ project5 - nodejs ============

http_archive(
    name = "build_bazel_rules_nodejs",
    sha256 = "3ceb1e5b5dcad5fa2ad8870a20201cfbb9c9c63cac4055c9ab370034c765297f",
    urls = ["https://github.com/bazelbuild/rules_nodejs/releases/download/5.3.0/rules_nodejs-5.3.0.tar.gz"],
)

load("@build_bazel_rules_nodejs//:repositories.bzl", "build_bazel_rules_nodejs_dependencies")

build_bazel_rules_nodejs_dependencies()

# (最單純的用法, 使用 rules_nodejs 版本預設的 node 版本) fetches nodejs, npm, and yarn
load("@build_bazel_rules_nodejs//:index.bzl", "node_repositories", "yarn_install")

# 可指定 node_version, 清單位於 /nodejs/private/node_versions.bzl
node_repositories()


# bazel run @yarn//:yarn
yarn_install(
    name = "npm",
    package_json = "//:package.json",
    yarn_lock = "//:yarn.lock",
)


### ============ project6 -  ============
### ============ project7 -  ============
