load("@io_bazel_rules_python//python:defs.bzl", "py_binary")

py_binary(
    name = "hello_world_python",
    main = "hello_world.py",
    srcs = [
        "hello_world.py",
    ],
)

py_library(
    name = "calculator",
    srcs = [
        "calculator.py"
    ],
    visibility = [
        "//visibility:public"
    ],
)

py_test(
    name = "calculator_test",
    srcs = [
        "calculator_test.py"
    ],
    deps = [
        "calculator",
    ],
)