load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

load("@io_bazel_rules_python//python:defs.bzl", "py_binary")


go_library(
    name = "transmission_object_go",
    srcs = [
        "transmission_object.go",
    ],
    importpath = "transmission_object",
)

go_binary(
    name = "echo_server",
    srcs = [
        "echo_server.go",
    ],
    deps = [
        ":transmission_object_go",
    ],
)

java_library(
    name = "transmission_object_java",
    srcs = [
        "TransmissionObject.java",
    ],
    visibility = [
        "//ch5/src:__pkg__",
    ],
)

java_binary(
    name = "echo_client",
    main_class = "EchoClient",
    srcs = [
        "EchoClient.java",
    ],
    deps = [
        "transmission_object_java",
        "//ch5/third_party:gson",
    ]
)

py_binary(
    name = "echo_client_py",
    main = "echo_client.py",
    srcs = [
        "echo_client.py",
    ],
)