py_library(
    name = "calculator",
    srcs = [
        "calculator.py",
    ],
    visibility = ["//visibility:public"],
)

py_test(
    name = "calculator_test",
    srcs = [
        "calculator_test.py",
    ],
    deps = [
        "//projects/project2/calculator:calculator",
    ],
    # main = "calculator_test.py"
)