py_library(
    name = "calculator",
    srcs = [
        "calculator.py",
    ],
    # visibility = ["//visibility:public"],
    visibility = [
        "//projects/project2/my-python-app:__pkg__",
    ]
)

py_test(
    name = "calculator_test",
    srcs = [
        "calculator_test.py",
    ],
    deps = [
        "//projects/project2/calculator:calculator",
    ],
)