py_library(
    name = "calculator",
    srcs = [
        "calculator.py",
    ],
    # visibility = ["//visibility:public"],
    visibility = [
        "//projects/project2/python_web:__pkg__",
    ]
)

py_test(
    name = "calculator_test",
    srcs = [
        "calculator_test.py",
    ],
    deps = [
        "//projects/project2/python_calculator:calculator",
    ],
)