load("@io_bazel_rules_go//go:def.bzl", "go_binary")

go_binary(
    name = "go_web",
    srcs = [
        "main.go",
    ],
    deps = [
        # "//projects/project4/go_hello_world:go_hello_world",
        "//projects/project4/go_calculator:go_calculator",
        "@com_github_gorilla_mux//:mux",
    ],
)