load("@python_deps//:requirements.bzl", "requirement")
load("@io_bazel_rules_docker//python3:image.bzl", py_image="py3_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_push")

py_library(
    name = "python_web_lib",
    srcs = ["python_web.py"],
    deps = [
        requirement("Flask"),
        "//projects/project6/python_calculator:calculator",
    ],
)

py_binary(
    name = "python_web",
    srcs = ["python_web.py",],
    deps = [":python_web_lib"],
    main = "python_web.py",
)

py_image(
    name = "python_web_image",
    srcs = ["python_web.py",],
    deps = [":python_web_lib"],
    main = "python_web.py",
)

container_push(
    name = "push",
    image = ":python_web_image",
    format = "Docker",
    registry = "registry.hub.docker.com",
    repository = "cool21540125/monorepo-python-web",
    tag = "0.1.0",
)